// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useValidatedQuery > doesn't throw 400 Bad Request if query does not match validation schema 1`] = `
{
  "issues": [
    {
      "expected": "string",
      "kind": "schema",
      "message": "Invalid type: Expected string but received undefined",
      "path": [
        {
          "input": {},
          "key": "required",
          "origin": "value",
          "type": "object",
        },
      ],
      "received": "undefined",
      "type": "string",
    },
  ],
  "output": {},
  "success": false,
  "typed": false,
}
`;

exports[`useValidatedQuery > returns 200 OK if query matches validation schema 1`] = `
{
  "required": "",
}
`;

exports[`useValidatedQuery > throws 400 Bad Request if query does not match validation schema 1`] = `
{
  "data": {
    "issues": [
      {
        "expected": "string",
        "kind": "schema",
        "message": "Invalid type: Expected string but received undefined",
        "path": [
          {
            "input": {},
            "key": "required",
            "origin": "value",
            "type": "object",
          },
        ],
        "received": "undefined",
        "type": "string",
      },
    ],
    "name": "ValiError",
  },
  "stack": [],
  "statusCode": 400,
  "statusMessage": "Bad Request",
}
`;
